User checkpoint: Update predictions header to "Predicciones de Inseguridad".

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -7,7 +7,7 @@
             <div class="col-12">
                 <div class="predictions-container">
                     <div class="predictions-header">
-                        <h3>Predicciones de Seguridad</h3>
+                        <h3>Predicciones de Inseguridad</h3>
                         <p>Recibe alertas sobre las áreas con mayor riesgo de incidentes para mantenerte informado y seguro.</p>
                     </div>
                     <div class="notification-toggle">
