User checkpoint: Center align "Predicciones de Inseguridad" heading.

--- a/templates/predictions.html
+++ b/templates/predictions.html
@@ -5,7 +5,7 @@
     <div class="container">
         <div class="row mb-4">
             <div class="col-12">
-                <h3 class="text-white mb-4">Predicciones de Inseguridad</h3>
+                <h3 class="text-white mb-4 text-center">Predicciones de Inseguridad</h3>
                 <div class="predictions-container">
                     <div class="predictions-header">
                         <i class="fas fa-brain fa-3x mb-3" style="color: #3b82f6;"></i>
